@@ -1,6 +1,9 @@
 v3.3.20 (XXXX-XX-XX)
 --------------------
 
+* in a cluster environment, the arangod process now exits if wrong credentials
+  are used during the startup process.
+
 * Fixed an AQL bug where the optimize-traversals rule was falsely applied to
   extensions with inline expressions and thereby ignoring them
 
